kustomize/overlay/staging/madu-app2-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: madu-app2-staging
  labels:
    environmentId: env_440a0a07-1240-41b3-8d13-d7cca41760ac
    projectId: project_9b2e36b1-b844-4e28-837b-bc6f1a1e5402
    projectName: madu-app2
    environmentName: staging
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
