kustomize/overlay/staging/madu-test-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: madu-test-staging
  labels:
    environmentId: env_b4b1f42a-7158-4f6f-847f-6ce647139ea1
    projectId: project_012391f9-44e2-4a57-9c81-c43aa22fd7c3
    projectName: madu-test
    environmentName: staging
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
